# news-semantic-api

./: .gitignore  Makefile  README.md  docker-compose.local.yml  monitoring-news-api.yaml  pyproject.toml  pyproject.toml.bak
.data.BAK/qdrant/: raft_state.json
.github/workflows/: cd-main.yml  ci-pr.yml  pr-tests.yml  tf-apply.yml  tf-plan.yml
api/: analysis.py  main.py  schemas.py  service.py
clients/: qdrant_client.py
deploy/: Dockerfile
deploy/docker/: entrypoint.sh
deploy/helm/news-semantic-api/: Chart.yaml  values.dev.yaml  values.gke.yaml  values.yaml
deploy/helm/news-semantic-api/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  servicemonitor.yaml
embedding/: provider.py
infra/terraform/gcp/dev/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf  versions.tf
ingest/: rss.py  rss_job.py
tests/: conftest.py  test_api.py  test_bonus_endpoints.py  test_doc_and_search_integration.py  test_search_title_filter.py
